# api/src/Enum/BookmarkIndexActionType.php
@@ -1,0 +1,11 @@
+<?php
+
+namespace App\Enum;
+
+enum BookmarkIndexActionType: string
+{
+    case Created = 'created';
+    case Updated = 'updated';
+    case Deleted = 'deleted';
+    case Outdated = 'outdated';
+}
